<resources>
    <string name="app_name">Trending on GitHub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="open_on_github">open on github</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="sign_in_to_github">Sign in to GitHub</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="skip">Skip</string>
    <string name="logout">logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="trending">Trending</string>
    <string name="starred">Starred</string>
    <string name="settings">settings</string>
</resources>
